--- a/petclinic/style.css
+++ b/petclinic/style.css
@@ -12,50 +12,32 @@ h4 {
     font-size: 150%;
     padding: 0px 0px 5px 0px;
     margin: 0px 0px 0px 0px;
-    font-family: newHeader;
-}
-
-@font-face {
-    font-family: newHeader;
-    src: url(font/Poppins-Regular.otf);
-    font-weight: 300;
-}
-
-@font-face {
-    font-family: newfont;
-    src: url(font/Poppins-Light.otf);
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .navbar {
     width: 100%;
     height: 80px;
-    background-image: linear-gradient( rgba(rgba(58, 182, 151, 0.5), rgb(0, 0, 0)));
+    background-color: rgba(121, 173, 160, 0.5);
     display: flex;
     justify-content: space-around;
     align-items: center;
     color: black;
-    font-family: newHeader;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .body {
     width: 100%;
     height: 94vh;
     padding: 0px 0px 0px 0px;
-    margin: 0px 0px px 0px;
+    margin: 0px 0px 0px 0px;
     display: flex;
     justify-content: center;
     align-items: center;
     background-image: linear-gradient( rgba(161, 228, 211, 0.5), rgba(0, 0, 0, 0.5));
     background-position: center;
     background-size: cover;
-    font-family: newHeader;
-}
-
-.container {
-    border-radius: 10px;
-    background-color: #d80101;
-    padding: 20px;
-    margin: 0px 40px 0px 40px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .heading {
