--- a/petclinic/style_add.css
+++ b/petclinic/style_add.css
@@ -3,6 +3,7 @@
     margin: 0px;
     box-sizing: border-box;
     list-style: none;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .navbar {
@@ -16,6 +17,13 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+#imageH {
+    border-radius: 50%;
+    margin-right: 10px;
+    width: 80px;
+    height: 70px;
+}
+
 h1,
 h2,
 h3,
@@ -27,22 +35,112 @@ h4 {
 
 .container {
     display: flex;
-    justify-content: left;
-    border-radius: 5px;
+    justify-content: center;
+    border-radius: 10px;
     background-color: #f2f2f2;
     padding: 20px;
     margin: 20px;
+    font-size: 20px;
 }
 
-.container tr {
-    background-color: aquamarine;
-    border-color: black 2px;
+.inputD {
+    background-color: rgb(247, 247, 247);
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 3px 0px 6px #888888;
+    color: #1f1f1f;
+}
+
+.container a {
+    text-decoration: none;
+}
+
+.container td {
+    display: flex;
+    flex-direction: row;
+    padding: 5px 5px 10px 4px;
 }
 
 input[type*="text"] {
-    background-color: aquamarine;
+    width: 800px;
+    height: 40px;
+    font-size: 20px;
+    border-radius: 4px;
+    border: none;
+    box-shadow: 3px 0px 6px #888888;
+}
+
+input[type*="number"] {
+    width: 800px;
+    height: 40px;
+    font-size: 20px;
+    border: none;
+    box-shadow: 3px 0px 6px #888888;
+}
+
+input[type*="radio"] {
+    margin: 0px 5px 0px 5px;
+}
+
+input[type*="submit"] {
+    background-color: rgb(255, 255, 255);
+    width: 100px;
+    height: 50px;
+    border: none;
+    margin: 0px 50px 10px 0px;
+    border-radius: 5px;
+    font-size: large;
+    transition: 200ms;
+}
+
+input[type*="submit"]:hover {
+    background-color: rgb(77, 253, 54);
+    width: 100px;
+    height: 50px;
+    border: none;
+    margin: 0px 50px 10px 0px;
+    border-radius: 5px;
+    font-size: large;
+    transition: 200ms;
+}
+
+input[type*="reset"] {
+    background-color: rgb(255, 255, 255);
+    width: 100px;
+    height: 50px;
+    border: none;
+    margin: 0px 50px 40px 0px;
+    border-radius: 5px;
+    font-size: large;
+    transition: 200ms;
+}
+
+input[type*="reset"]:hover {
+    background-color: rgb(255, 72, 72);
+    width: 100px;
+    height: 50px;
+    border: none;
+    margin: 0px 50px 40px 0px;
+    border-radius: 5px;
+    font-size: large;
+    transition: 200ms;
+}
+
+.kotak_add {
+    display: flex;
+    align-content: center;
 }
 
 textarea {
-    background-color: aquamarine;
+    text-align: left;
+    font-size: 20px;
+    width: 800px;
+    border-radius: 4px;
+    border: none;
+}
+
+select {
+    width: 800px;
+    height: 40px;
+    font-size: 20px;
 }
