--- a/petclinic/style_login.css
+++ b/petclinic/style_login.css
@@ -12,7 +12,7 @@ h1 {
 }
 
 .navbar {
-    background-color: #3c7741;
+    background-color: #383838;
     box-sizing: border-box;
     color: aliceblue;
     padding: 10px;
@@ -20,10 +20,7 @@ h1 {
 
 body {
     font-family: sans-serif;
-    background-image: url(gambar.jpg);
-    background-size: cover;
-    background-position: center;
-    box-sizing: border-box;
+    background-image: url(untitled8.png);
 }
 
 .tulisan_login {
