--- a/petclinic/style.css
+++ b/petclinic/style.css
@@ -1,34 +1,117 @@
 * {
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
-    list-style: none;
-}
-
-h1,
-h2,
-h3,
-h4 {
-    font-size: 150%;
-    padding: 0px 0px 5px 0px;
-    margin: 0px 0px 0px 0px;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 .navbar {
-    width: 100%;
-    height: 80px;
-    background-color: rgba(121, 173, 160, 0.5);
+    background-color: rgb(114, 173, 151);
     display: flex;
     justify-content: space-around;
     align-items: center;
-    color: black;
+    color: rgb(228, 225, 225);
     font-family: Arial, Helvetica, sans-serif;
+    line-height: 5rem;
+}
+
+.player-holder {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    overflow: hidden;
+    background-color: blue;
+    /* commented for demo
+  float: left;
+  margin-left: 125px;
+  margin-top: 20px;
+  */
+    /*for demo*/
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.card-img {
+    position: relative;
+    height: 150px;
+    border-radius: 50%;
+    margin: 0px 0px 60px 10px;
+}
+
+.img-card {
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.left h1 {
+    font-size: 2.5rem;
+    cursor: pointer;
+}
+
+.checkbin {
+    display: none;
+}
+
+#check {
+    display: none;
+}
+
+.checkbin {
+    cursor: pointer;
+    font-size: 30px;
+    float: right;
+    color: #ed1e79;
+    line-height: 80px;
+}
+
+.right ul {
+    display: flex;
+    list-style: none;
+}
+
+.right ul li a {
+    padding: 10px 20px;
+    font-size: 1.2rem;
+    color: white;
+    cursor: pointer;
+    text-decoration: none;
+    transition: all 300ms;
+}
+
+.right ul li a:hover {
+    background-color: #fff;
+    border-radius: 7px;
+    color: rgb(155, 126, 182);
+}
+
+@media screen and (max-width: 805px) {
+    .list {
+        width: 100%;
+        height: 100vh;
+        background-color: rgb(76, 30, 119);
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        position: fixed;
+        top: 4rem;
+        left: 100%;
+        transition: all 300ms;
+    }
+    #check {
+        display: none;
+    }
+    .checkBtn {
+        display: block;
+    }
+    #check:checked~ul {
+        left: 0%;
+    }
 }
 
 .body {
     width: 100%;
-    height: 94vh;
+    height: 92vh;
     padding: 0px 0px 0px 0px;
     margin: 0px 0px 0px 0px;
     display: flex;
@@ -38,6 +121,104 @@ h4 {
     background-position: center;
     background-size: cover;
     font-family: Arial, Helvetica, sans-serif;
+    position: fixed;
+}
+
+.share-button {
+    text-decoration: none;
+    color: #000;
+    font-size: 25px;
+    font-weight: bold;
+    border-radius: 45px;
+    padding: 14px 50px;
+    background-color: #fff;
+    transition: 0.6s;
+    border: none;
+    cursor: pointer;
+}
+
+.share-button:hover {
+    letter-spacing: 3px;
+    transition: 0.6s;
+}
+
+.modal-content {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.3);
+    pointer-events: none;
+    opacity: 0;
+    transition: 300ms;
+}
+
+.modal-body {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 7px;
+    width: 25%;
+    color: #000;
+    text-align: center;
+    max-width: 1240px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.modal-body img {
+    width: 20px;
+    height: 20px;
+    display: inline;
+    position: relative;
+}
+
+.show-modal {
+    opacity: 1;
+    pointer-events: all;
+    transition: 300ms;
+}
+
+.modal-body .social-media {
+    margin-bottom: 30px;
+}
+
+.social-media button {
+    height: 30px;
+    width: 100px;
+    border-radius: 5px;
+    border: none;
+    color: #fff;
+    background-color: rgb(75, 75, 75);
+    transition: 300ms;
+}
+
+.social-media button a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.social-media button:hover {
+    cursor: pointer;
+    background-color: #ed1e79;
+    transition: 300ms;
+}
+
+.social-media button:active {
+    transform: scale(0.95);
+}
+
+.modal-body h2 {
+    margin-bottom: 20px;
+}
+
+.modal-body ul {
+    margin-bottom: 30px;
+    text-align: left;
+    padding: 0px 0px 0px 65px;
+    list-style: none;
 }
 
 .heading {
@@ -56,6 +237,7 @@ h4 {
     font-size: 25px;
     font-weight: bold;
     border-radius: 45px;
+    border: none;
     padding: 14px 50px;
     background-color: #fff;
     transition: 0.6s;
