--- a/petclinic/style_read.css
+++ b/petclinic/style_read.css
@@ -17,7 +17,7 @@ h4 {
 .navbar {
     width: 100%;
     height: 80px;
-    background-color: rgba(121, 173, 160, 0.5);
+    background-color: rgba(121, 173, 160, 1);
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -25,16 +25,17 @@ h4 {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.body {
-    width: 100%;
-    height: 94vh;
+body {
+    min-height: 100%;
+    min-width: 1024px;
     padding: 0px 0px 0px 0px;
     margin: 0px 0px 0px 0px;
     display: flex;
-    flex-direction: column;
-    background-image: linear-gradient( rgba(161, 228, 211, 0.5), rgba(119, 119, 119, 0.5));
-    background-position: center;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(icon/background1Artboard\ 1@4x.png);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     background-size: cover;
+    flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -47,6 +48,17 @@ h4 {
     display: flex;
     align-items: center;
     list-style: none;
+}
+
+.icon_image {
+    object-fit: cover;
+    width: 50px;
+    height: 50px;
+}
+
+td[align="center"] {
+    width: 50px;
+    height: 50px;
 }
 
 .text ul li a {
@@ -71,7 +83,8 @@ h4 {
 .customers {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
-    width: 100%;
+    width: 90%;
+    margin: 40px 0px 0px 0px;
 }
 
 .customers td,
